--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <span class="title">OrangeField·<span>橙的自留地</span></span>
     </h1>
     <p style="max-width:620px;font-size:1.1rem;opacity:.85">
-      🚀 这里是橙的自留地，我想用这种博客的方式记录、分享我的思考，欢迎来玩<br><br>
+      🚀 这里是橙的自留地，我想用博客这种方式记录、分享我的思考，欢迎来玩<br><br>
     </p>
   </section>
 
